plugins {
    id 'com.android.application'
}

android {
    compileSdk 33

    defaultConfig {
        applicationId "com.tugasakhir.elderlycarewearable"
        minSdk 30
        targetSdk 35
        versionCode 1
        versionName "1.0"

    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        viewBinding true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_9
        targetCompatibility JavaVersion.VERSION_1_9
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
    implementation 'androidx.percentlayout:percentlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    implementation 'androidx.wear:wear:1.2.0'

    // MQTT Library
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    //implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
    implementation('org.eclipse.paho:org.eclipse.paho.android.service:1.1.1') {
        exclude module: 'support-v4'
    }

    // Local Broadcast
    implementation 'androidx.localbroadcastmanager:localbroadcastmanager'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    // retrofit, gson
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.4.0'

    // Health Service
    implementation 'androidx.health:health-services-client:1.0.0-beta02'

    // Add on for concurrent futures
    implementation "androidx.concurrent:concurrent-futures:1.1.0"
    implementation 'com.google.guava:guava:30.1.1-android'
}